--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "i18next-ko": "^1.3.2",
     "knockout": "^3.4.0",
+    "lodash": "^4.0.0",
     "page": "~1.6.4"
   }
 }
