--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tutor/app-base",
   "version": "0.1.0",
   "description": "A common base for all Tutor apps, including routing and basic UI stuff.",
-  "main": "src/tutor-app-base.coffee",
+  "main": "src/index.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,10 @@
     "i18next-ko": "^1.3.2",
     "knockout": "^3.4.0",
     "lodash": "^4.0.0",
-    "page": "~1.6.4"
+    "page": "~1.6.4",
+    "q": "^1.4.1"
+  },
+  "browserify": {
+    "transform": ["coffeeify"]
   }
 }
