--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@tutor/app-base",
   "version": "1.0.0",
   "description": "A common base for all Tutor apps, including routing and basic UI stuff.",
-  "main": "src/index.coffee",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "transpile": "coffee -o ./dist/ -c ./src/"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "lodash": "^4.0.0",
     "page": "~1.6.4",
     "q": "^1.4.1"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0"
   }
 }
